# CompareAI

./: .gitignore  DEPLOY_FREE_0D.md  README.md  datn.md  docker-compose.yml  erd.dbml  render.yaml  wrangler.jsonc
backend/python-training/chat-backend/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
backend/python-training/chat-backend/app/: alembic.ini  main.py
backend/python-training/chat-backend/app/alembic-chat-backend/: env.py
backend/python-training/chat-backend/app/alembic-chat-backend/versions/: 202604021120_468ee9b25b80_init_db.py  202604021610_c8b9d7f4a102_seed_master_data.py  202604130900_9c3a7b1d2e4f_documents_cv_jd_unified.py  202605111842_06ce6e93294c_add_analysis_results_table.py
backend/python-training/chat-backend/app/api/: document_api.py  health_check.py  oauth_api.py  routes.py  user_api.py  web_api.py
backend/python-training/chat-backend/app/configuration/: .env.example  settings.py
backend/python-training/chat-backend/app/core/: api_version_router.py  constants.py  messages.py
backend/python-training/chat-backend/app/db/: db_connection.py
backend/python-training/chat-backend/app/services/: cv_parser_service.py  document_match_service.py  document_service.py  file_storage_service.py  google_auth_service.py  key_manager_service.py  plan_service.py  role_service.py  user_auth_service.py  user_service.py
backend/python-training/chat-backend/app/templates/: base.html  dashboard.html  report.html
backend/python-training/chat-backend/app/tests/: README.md
backend/python-training/chat-backend/tests/: test_document_access_local.py  test_document_match_service.py  test_oauth_cookie_refresh.py  test_r2_integration.py
(+138 files in other folders)
