[project]
name = "chat-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Name",email = "you@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "fastapi-pagination (>=0.13.3,<0.14.0) ; python_version < \"4.0\"",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "fastapi-versioning (>=0.10.0,<0.11.0)",
    "starlette-context (>=0.4.0,<0.5.0) ; python_version < \"4.0\"",
    "msgspec (>=0.19.0,<0.20.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "polib (>=1.2.0,<2.0.0)",
    "aiobotocore (>=2.24.2,<3.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "google-auth (>=2.49.1,<3.0.0)",
    "google-auth-oauthlib (>=1.3.0,<2.0.0)",
    "authlib (==1.6.1)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "sentence-transformers (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.5.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
